# StMcmcCme

./: .gitignore  .gitmodules  README.md
cme/pacmensl/: .gitignore  CMakeLists.txt  README.md
cme/pacmensl/cmake-modules/: README
cme/pacmensl/docker/: Dockerfile
cme/pacmensl/docker/install_scripts/: install_arma.sh  install_conda.sh  install_metis.sh  install_mpi.sh  install_petsc.sh  install_sundials.sh  install_zoltan.sh
cme/pacmensl/examples/: CMakeLists.txt  hog1p.cpp  hog1p_matvec.cpp  repressilator.cpp  signal_activated_bursting.cpp  time_invariant_bursting.cpp  transcr_reg_6d.cpp
cme/pacmensl/ext/: ext_armadillo.py  ext_cvode.py  ext_parmetis.py  ext_petsc.py  ext_petsc_sandia.py  ext_zoltan.py  get_ext_libraries.py
cme/pacmensl/src/: CMakeLists.txt  pacmensl.h  pacmensl_all.h
cme/pacmensl/src/Fsp/: CMakeLists.txt  DiscreteDistribution.cpp  DiscreteDistribution.h  FspSolverMultiSinks.cpp  FspSolverMultiSinks.h
cme/pacmensl/src/Matrix/: CMakeLists.txt  FspMatrixBase.cpp  FspMatrixBase.h  FspMatrixConstrained.cpp  FspMatrixConstrained.h
cme/pacmensl/src/Models/: CMakeLists.txt  Model.cpp  Model.h  SensModel.cpp  SensModel.h  hog1p_3d_model.h  hog1p_5d_model.h  repressilator_model.h  toggle_model.h  transcription_regulation_6d_model.h
cme/pacmensl/src/OdeSolver/: CMakeLists.txt  CvodeFsp.cpp  CvodeFsp.h  EpicFsp.cpp  EpicFsp.h  KrylovFsp.cpp  KrylovFsp.h  OdeSolverBase.cpp  OdeSolverBase.h  TsFsp.cpp  TsFsp.h
cme/pacmensl/src/OdeSolver/EpicHeaders/: AdaptiveKrylovPhi.h  AdaptiveKrylovPhiMultipleTimes.h  CBlasLapack.h  EpiRK4SC.h  EpiRK4SV.h  EpiRK5C.h  EpiRK5SC.h  EpiRK5V.h  Epic.h  EpicConst.h  EpicSundials.h  EpicTypes.h  ExpMHigham.h  IntegratorStats.h  JTimesV.h
cme/pacmensl/src/Partitioner/: CMakeLists.txt  StatePartitioner.cpp  StatePartitioner.h  StatePartitionerBase.cpp  StatePartitionerBase.h  StatePartitionerGraph.cpp  StatePartitionerGraph.h  StatePartitionerHyperGraph.cpp  StatePartitionerHyperGraph.h
cme/pacmensl/src/PetscWrap/: CMakeLists.txt  PetscWrap.cpp  PetscWrap.h
cme/pacmensl/src/SensFsp/: ForwardSensCvodeFsp.cpp  ForwardSensSolverBase.cpp  ForwardSensSolverBase.h  SensDiscreteDistribution.cpp  SensDiscreteDistribution.h  SensFspMatrix.cpp  SensFspMatrix.h  SensFspSolverMultiSinks.cpp  SensFspSolverMultiSinks.h
cme/pacmensl/src/SmFish/: SmFishSnapshot.cpp  SmFishSnapshot.h
cme/pacmensl/src/StateSet/: StateSet.cpp  StateSet.h  StateSetBase.cpp  StateSetBase.h  StateSetConstrained.cpp  StateSetConstrained.h
cme/pacmensl/src/StationaryFsp/: CMakeLists.txt  StationaryFspMatrixConstrained.cpp  StationaryFspMatrixConstrained.h  StationaryFspSolverMultiSinks.cpp  StationaryFspSolverMultiSinks.h  StationaryMCSolver.cpp  StationaryMCSolver.h
cme/pacmensl/src/Sys/: CMakeLists.txt  ErrorHandling.h  Sys.cpp  Sys.h  pacmenMath.h
cme/pacmensl/tests/: CMakeLists.txt  pacmensl_test_env.h  test_dd.cpp  test_fsp_solver.cpp  test_fss.cpp  test_mat.cpp  test_ode.cpp  test_petscwrap.cpp  test_sens_ode.cpp  test_sensfsp_solver.cpp  test_sensmat.cpp  test_smfish.cpp  test_stationaryfsp_solver.cpp
examples/comparmental_gene_expression/: gene_expr_inference.py  gene_expr_model.py  gene_expr_stmcmc.py  gene_expression_2_mcmc_full.npz  gene_expression_2_mcmc_multifi.npz  gene_expression_3_mcmc_multifi.npz  gene_expression_4_mcmc_multifi.npz  gene_expression_data.npz  gene_expression_fsp_performance.npz  plot_mc_results.ipynb
examples/illustrations/: birth_death_surrogate_cme.py  bursting_generate_data.py  bursting_stmcmc_mpi.py  toggle_stmcmc.py
examples/inflammation/: Inflamation_Compare.ipynb  convert_data_formats.py  il1b_no_drug_fit.ipynb  il1beta_benchmark.py  il1beta_inference.py  il1beta_model.py  il1beta_predict.py  il1beta_predict_bridge.py  il1beta_predict_full.py  il1beta_predict_mult.py  il1beta_predict_tuned.py  il1beta_prediction.py  il1beta_stmcmc.py  il1beta_stmcmc_bridge.py  il1beta_stmcmc_full.py  il1beta_stmcmc_mult.py  il1beta_stmcmc_tuned.py  submit_il1b_bridge.bash  submit_il1b_full.bash  submit_il1b_mcmc.bash  submit_il1b_mult.bash  submit_il1b_tuned.bash
examples/repressilator/: batch.openmpi.bash  plot_mc_results.ipynb  repressilator_Compare.ipynb  repressilator_compare_fsp_approaches.py  repressilator_data.npz  repressilator_fsp_performance.npz  repressilator_inference.py  repressilator_model.py  repressilator_stmcmc.py  repressilator_stmcmc_restart.py  slurm-399175.out  slurm-399588.out
pacmensl/: CMakeLists.txt
pacmensl/cmake-modules/: FindPETSc.cmake  LICENSE
pacmensl/docs/: doc_config
pacmensl/examples/: CMakeLists.txt  hog1p.cpp  repressilator.cpp  simple_petsc_program.cpp  tnfa_no_drug.cpp
pacmensl/ext/: ext_metis.py
pacmensl/src/Fsp/: DiscreteDistribution.cpp  DiscreteDistribution.h
pacmensl/src/Matrix/: FspMatrixBase.cpp  FspMatrixConstrained.h
pacmensl/src/Models/: Model.cpp  Model.h
pacmensl/src/OdeSolver/: KrylovFsp.h  OdeSolverBase.cpp  OdeSolverBase.h  TsFsp.h
pacmensl/src/Partitioner/: StatePartitioner.h
pacmensl/src/SensFsp/: CMakeLists.txt  ForwardSensCvodeFsp.cpp  ForwardSensCvodeFsp.h  SensFspMatrix.h
pacmensl/src/SmFish/: CMakeLists.txt
pacmensl/src/StateSet/: CMakeLists.txt  StateSet.cpp
pacmensl/tests/: gtest_mpi_listener.h  pacmensl_test_env.h  test_ao.cpp  test_fsp_solver.cpp  test_stationaryfsp_solver.cpp
papers/MultifiSTMCMCFSP/: library.bib  main.tex  settings.tex
results/comparmental_gene_expression/: Gene_Expression_Model_results.ipynb  gene_evidence.tex  gene_expression_2_mcmc_full.npz  gene_expression_2_mcmc_tuned.npz  gene_expression_3_mcmc_full.npz  gene_expression_3_mcmc_tuned.npz  gene_expression_4_mcmc_full.npz
results/repressilator/: Untitled.ipynb  plot_mc_results.ipynb  repressilator_pos.tex
stmcmc/: __init__.py  stmcmc.py  stmcmc_bridge.py  stmcmc_multifi.py  stmcmc_multifidelity_ess_bridge.py  stmcmc_multifidelity_it.py  stmcmc_multifidelity_it_tuned.py  stmcmc_restart.py  stmcmc_single_fidelity.py  stmcmc_tuned.py  stmcmcmultifidelityit.py  stmcmcmultifidelityittuned.py  stmcmcsinglefidelity.py
tests/: poisson_stmcmc.py
(+30 files in other folders)
